<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imv_cintas_logo3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/cintas_logo2" />

        <EditText
            android:id="@+id/et_event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/event_time_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_host_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/serial_num_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/user_id_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_location_nbr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:maxLength="4"
            android:digits="0123456789"
            android:hint="@string/location_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_route_nbr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:digits="0123456789"
            android:maxLength="2"
            android:hint="@string/route_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:maxLength="1"
            android:digits="0123456789"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/day_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_logger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/logger_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_event_nbr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/event_number_hint"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="5" />

        <EditText
            android:id="@+id/et_addt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/additional_description_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_addt_nbr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/additional_number_hint"
            android:inputType="number"
            android:digits="0123456789" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:text="@string/submit_btn_text"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:text="@string/update_btn_text"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_display"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/display_btn_text"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>