<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp">

            <Button
                android:id="@+id/btn_return_to_home"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:text="@string/return_to_home_btn_text"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_delete_all"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:text="@string/delete_all_btn_text"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp">

            <Button
                android:id="@+id/btn_insert_device_info"
                android:layout_width="125dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="40dp"
                android:text="@string/insert_device_entries_btn_text"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_display_xml"
                android:layout_width="125dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="40dp"
                android:text="@string/display_xml_btn_text"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>